- fix navigation, center links on small resolution

--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,10 @@
   .logo {
     width: 150px;
   }
+
+  .navbar-default .navbar-nav > li > a {
+    text-align: center;
+  }
 }
 
 @media (min-width: 768px) {
